responsive background image

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -16,9 +16,12 @@
     }
 
     .image {
-        background-image: url('../../assets/fabric.jpg');
         height: 170px;
-        background-size: cover;
-        background-position: 50%;
+        overflow: hidden;
+
+        img {
+            position: relative;
+            top: -50%;
+        }
     }
 }
